# aws-sso-user-list

./: README.md  pyproject.toml
.github/workflows/: python-app.yml
aws_sso_user_list/: cli.py  mfa_device.py  user.py  utils.py
tests/: test_cli.py  test_mfa_device.py  test_users.py  test_utils.py
